--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Lit</title>
 </head>
 <body>
-    <script type="module" src="./"></script>
+    <my-timer></my-timer>
+    <script type="module" src="./a.js"></script>
 </body>
 </html>
