--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Lit</title>
 </head>
 <body>
-    <my-timer></my-timer>
+    <my-start></my-start>
+    <my-second></my-second>
     <script type="module" src="./a.js"></script>
+    <script type="module" src="./b.js"></script>
 </body>
 </html>
