--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lit</title>
+    <title>Lit-Element</title>
 </head>
 <body>
     <my-start></my-start>
     <my-second></my-second>
+    <my-third></my-third>
     <script type="module" src="./a.js"></script>
     <script type="module" src="./b.js"></script>
+    <script type="module" src="./c.ts"></script>
 </body>
 </html>
