--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lit-Element</title>
+    <link rel="stylesheet" href="o.css">
 </head>
 <body>
     <my-start></my-start>
@@ -12,6 +13,6 @@
     <my-third></my-third>
     <script type="module" src="./a.js"></script>
     <script type="module" src="./b.js"></script>
-    <script type="module" src="./c.ts"></script>
+    <script type="module" src="./c.js"></script>
 </body>
 </html>
