--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <my-start></my-start>
     <my-second></my-second>
     <my-third></my-third>
+    <my-fourth></my-fourth>
     <script type="module" src="./a.js"></script>
     <script type="module" src="./b.js"></script>
     <script type="module" src="./c.js"></script>
+    <script type="module" src="./d.js"></script>
 </body>
 </html>
